css added visibility:hidden to clear fix

--- a/unit_6/style.css
+++ b/unit_6/style.css
@@ -103,6 +103,7 @@ ul	{
 	display: block;
 	font-size: 0;
 	height: 0;
+	visibility: hidden;
 }
 #wrapper{
 	width: 400px;
